--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "mypy>=1.18.2",
+    "pyright>=1.1.407",
     "ruff>=0.14.5",
     "types-pyyaml>=6.0.12.20250915",
 ]
