--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = [
-    "pathspec>=0.12.1",
-    "pydantic>=2.12.4",
-    "pyyaml>=6.0.3",
-]
+dependencies = ["pathspec>=0.12.1", "pydantic>=2.12.4", "pyyaml>=6.0.3"]
 
 [dependency-groups]
 dev = [
     "mypy>=1.18.2",
     "pyright>=1.1.407",
+    "pytest>=8.0.0",
     "ruff>=0.14.5",
     "types-pyyaml>=6.0.12.20250915",
 ]
@@ -37,6 +34,17 @@ ignore = [
     "E501", # line-too-long (handled by formatter)
     "B006",
 ]
+
+[tool.sndtk]
+exclude = ["*.test.py"]
+
+[tool.pytest.ini_options]
+testpaths = ["."]
+python_files = ["*.test.py"]
+python_functions = ["*"]
+python_classes = ["*"]
+pythonpath = ["."]
+
 
 [tool.mypy]
 python_version = "3.14"
