--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,13 +36,13 @@ ignore = [
 ]
 
 [tool.sndtk]
-exclude = ["*.test.py"]
+exclude = ["*.test.py", "conftest.py"]
 
 [tool.pytest.ini_options]
 testpaths = ["."]
 python_files = ["*.test.py"]
-python_functions = ["*"]
-python_classes = ["*"]
+python_functions = ["test__*"]
+python_classes = ["Test*"]
 pythonpath = ["."]
 
 
