--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["pathspec>=0.12.1", "pydantic>=2.12.4", "pyyaml>=6.0.3"]
+dependencies = [
+    "pathspec>=0.12.1",
+    "pydantic>=2.12.4",
+]
 
 [dependency-groups]
 dev = [
