--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "sndtk"
 version = "0.1.0"
@@ -5,6 +9,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = ["pathspec>=0.12.1", "pydantic>=2.12.4"]
+authors = [{ name = "Mirei Itaya", email = "mirei.itaya@gmail.com" }]
+license = { file = "LICENSE" }
+keywords = ["test", "coverage", "specification", "management"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.14",
+    "Programming Language :: Python :: 3.15",
+
+]
 
 [project.scripts]
 sndtk = "sndtk.__main__:cli"
