--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,36 +1,33 @@
 name: Publish to PyPI
-
 on:
   release:
     types: [published]
-
 permissions:
   id-token: write
-
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: pypi
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.14"
-
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
           version: "latest"
-
+      - name: Create environment
+        run: uv venv --python 3.14
       - name: Install build dependencies
         run: uv pip install build twine
-
       - name: Build package
         run: uv run python -m build
-
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
-
