--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ name = "sndtk"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
-dependencies = ["pathspec>=0.12.1", "pydantic>=2.12.4"]
+requires-python = ">=3.11"
+dependencies = ["pathspec>=0.12.1", "pydantic>=2.12.4", "tomli>=2.0.1"]
 authors = [{ name = "Mirei Itaya", email = "mirei.itaya@gmail.com" }]
 license = { file = "LICENSE" }
 keywords = ["test", "coverage", "specification", "management"]
@@ -16,9 +16,11 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3.15",
-
 ]
 
 [project.scripts]
@@ -34,7 +36,7 @@ dev = [
 ]
 
 [tool.ruff]
-target-version = "py314"
+target-version = "py311"
 line-length = 100
 
 [tool.ruff.lint]
@@ -65,7 +67,7 @@ pythonpath = ["."]
 
 
 [tool.mypy]
-python_version = "3.14"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
@@ -76,3 +78,7 @@ warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
 strict_equality = true
+
+[tool.hatch.envs.test]
+python = ["3.11", "3.12", "3.13", "3.14", "3.15"]
+dependencies = ["pytest>=8.0.0"]
