--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
-    "Programming Language :: Python :: 3.15",
 ]
 
 [project.scripts]
@@ -80,5 +79,5 @@ warn_no_return = true
 strict_equality = true
 
 [tool.hatch.envs.test]
-python = ["3.11", "3.12", "3.13", "3.14", "3.15"]
+python = ["3.11", "3.12", "3.13", "3.14"]
 dependencies = ["pytest>=8.0.0"]
