💚 fix CI build error in publish workflow
Replace uv venv with uv sync to properly install dependencies

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,8 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           version: "latest"
-      - name: Create environment
-        run: uv venv --python 3.11
+      - name: Install project dependencies
+        run: uv sync
       - name: Install build dependencies
         run: uv pip install build twine
       - name: Build package
